projects/vb6parse/snapshots/syntax/statements/filesystem/ch_drive/chdrive_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/filesystem/ch_drive.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ChDriveStatement
      children:
        - kind: ChDriveKeyword
          text: ChDrive
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"D:\""
    - kind: Newline
      text: "\n"
